Add an author/email comment

--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Author: Tushin (dugarnimaevt@gmail.com) -->
 <html>
   <head>
   </head>
@@ -6,5 +7,4 @@
     <h1>Hello, World!</h1>
   </body>
 </html>
-
 
