--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<!-- Author: Tushin (dugarnimaevt@gmail.com) -->
+<!-- Author: Alexander Shvets (alex@githowto.com) -->
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hello, World!</h1>
